--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Aditya</title>
 </head>
 <body>
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis nihil eos, laboriosam mollitia neque iste voluptas possimus consectetur odio inventore harum explicabo, temporibus unde quae itaque nam accusantium non!
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi sapiente ad quo tenetur, debitis enim ex accusantium alias aliquid porro, deserunt maxime minus! Ipsum cupiditate, eveniet earum voluptates rerum incidunt.</p>
 </body>
 </html>
