--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Aditya</title>
 </head>
 <body>
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus quis nihil eos, laboriosam mollitia neque iste voluptas possimus consectetur odio inventore harum explicabo, temporibus unde quae itaque nam accusantium non!
+    <p>hello</p>
+    <h1>how are we ?</h1>
 </body>
 </html>
